fixing the wrapping of the snippets

--- a/modules/ext.pageTriage.views/ext.pageTriage.listItem.css
+++ b/modules/ext.pageTriage.views/ext.pageTriage.listItem.css
@@ -99,4 +99,5 @@
 .mwe-pt-snippet {
 	color: #808080;
 	margin-left: 25px;
+	margin-right: 8em;
 }
